--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<!-- Basic Page Info -->
 		<meta charset="utf-8" />
-		<title>DANZZ API - DASHBOARD</title>
+		<title>MIAW API - DASHBOARD</title>
 		
 		<!-- ICON -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
@@ -203,20 +203,20 @@
 							<div class="notification-list mx-h-350 customscroll">
 								<ul>
 									<li>
-										<a href="https://youtube.com/c/DanzzCoding">
+										<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ">
 											<img src="src/images/icon2.png" alt="" />
-											<h3>Danzz Coding</h3>
+											<h3>Miaw Team</h3>
 											<p>
-												Don't Forget Subscribe Yt: DanzzCoding
+												Don't Forget Subscribe Yt: z4bux
 											</p>
 										</a>
 									</li>
 									<li>
-										<a href="https://instagram.com/ramdani_real01">
+										<a href="https://instagram.com/alwiiyy__">
 											<img src="src/images/icon2.png" alt="" />
-											<h3>Danzz Coding</h3>
+											<h3>Miaw Team</h3>
 											<p>
-												Don't Forget Follow Ig: @ramdani_real01
+												Don't Forget Follow Ig: @alwiiyy__
 											</p>
 										</a>
 									</li>
@@ -236,7 +236,7 @@
 							<span class="user-icon">
 								<img src="src/images/icon.png" style="width: 52px;"  alt="" />
 							</span>
-							<span class="user-name">Danzz Coding</span>
+							<span class="user-name">Miaw Team</span>
 						</a>
 						<div
 							class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list"
@@ -247,7 +247,7 @@
 							<a class="dropdown-item" href="#"
 								><i class="dw dw-settings2"></i> Setting</a
 							>
-							<a class="dropdown-item" href="https://wa.me/6288296339947"
+							<a class="dropdown-item" href="https://wa.me/628565337357"
 								><i class="dw dw-help"></i> Help</a
 							>
 							<a class="dropdown-item" href="/login"
@@ -478,7 +478,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://wa.me/628829633947?text=menu" class="dropdown-toggle no-arrow">
+							<a href="https://wa.me/6285751337466?text=.menu" class="dropdown-toggle no-arrow">
 								<span class="micon bi bi-robot"></span
 								><span class="mtext">Example Bot</span>
 							</a>
@@ -497,7 +497,7 @@
 							<ul class="submenu">
 								<li><a href="https://github.com/Danzzxcodes">Base Wa Bot</a></li>
 								<li>
-									<a href="https://wa.me/6288296339947">Example Bot</a>
+									<a href="https://wa.me/6285751337466">Example Bot</a>
 								</li>
 							</ul>
 						</li>
@@ -507,9 +507,9 @@
 								><span class="mtext">Customer Service</span>
 							</a>
 							<ul class="submenu">
-								<li><a href="https://wa.me/6288296339947">Cs on 24 Hours</a></li>
+								<li><a href="https://wa.me/628565337357">Cs on 24 Hours</a></li>
 								<li>
-									<a href="https://chat.whatsapp.com/Gq71DUTFOhRE9efPYyobYu">Cs Group on 24 Hours</a>
+									<a href="https://chat.whatsapp.com/IYa9dkJTtltDRPdXC8JaQt">Cs Group on 24 Hours</a>
 								</li>
 							</ul>
 						</li>
@@ -978,7 +978,7 @@
 							<div class="sidebar-small-cap">Contact</div>
 						</li>
 						<li>
-							<a href="mailto:danzzcoding@gmail.com" class="dropdown-toggle no-arrow">
+							<a href="mailto:mr.z4bux@gmail.com" class="dropdown-toggle no-arrow">
 								<span class="micon bx bx-envelope"></span
 								><span class="mtext">Email</span>
 							</a>
@@ -990,19 +990,19 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://youtube.com/c/DanzzCoding" class="dropdown-toggle no-arrow">
+							<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-youtube"></span
 								><span class="mtext">Youtube</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://instagram.com/ramdani_real01" class="dropdown-toggle no-arrow">
+							<a href="https://instagram.com/alwiiyy__" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-instagram"></span
 								><span class="mtext">Instagram</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://facebook.com/profile.php?id=100055274594084" class="dropdown-toggle no-arrow">
+							<a href="https://www.facebook.com/AlwiZX" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-facebook"></span
 								><span class="mtext">Facebook</span>
 							</a>
@@ -1174,7 +1174,7 @@
 								</div>
 								<div id="menu1" class="collapse show" data-parent="#accordion">
 									<div class="card-body">
-										Jual Rest Api Work All Features, Harga? 50k Minat Hub 088296339947
+										Jual Rest Api Work All Features, Harga? Chat Minat Hub 08565337357
 									</div>
 								</div>
 							</div>
@@ -1252,16 +1252,16 @@
                         	<div class="text-md-left font-weight-bold">
                             Contact
                             <p>
-                            	<a href="https://youtube.com/c/DanzzCoding" class="btn btn-primary btn-sm ml-2" target="_blank"><i class=""></i>Location: Bogor - Indonesia</a>
-                            	<a href="mailto:danzzcoding@gmail.com" class="btn btn-primary btn-sm ml-2" target="_blank"><i class=""></i>Email: danzzcoding@gmail.com</a>
-                            	<a href="https://wa.me/6288296339947" class="btn btn-primary btn-sm ml-2" target="_blank"><i class=""></i>Phone Number: 0882-9633-9947</a>
+                            	<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ" class="btn btn-primary btn-sm ml-2" target="_blank"><i class=""></i>Location: Kalimantan Selatan - Indonesia</a>
+                            	<a href="mailto:mr.z4bux@gmail.com" class="btn btn-primary btn-sm ml-2" target="_blank"><i class=""></i>Email: mr.z4bux@gmail.com</a>
+                            	<a href="https://wa.me/628565337357" class="btn btn-primary btn-sm ml-2" target="_blank"><i class=""></i>Phone Number: 0856-5337-357</a>
                             	</div>
                             	<div class="col-lg-12 text-center">
                             	<div class="text-md-left font-weight-bold">
                             	Social Media
                             	<div class="col-lg-12 text-center">
-                                <a href="https://instagram.com/ramdani_real01" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-instagram"></i>&nbsp;Instagram</a>
-                                <a href="https://instagram.com/ramdani_real01" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-facebook"></i>&nbsp;Facebook</a>
+                                <a href="https://instagram.com/alwiiyy__" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-instagram"></i>&nbsp;Instagram</a>
+                                <a href="https://www.facebook.com/AlwiZX" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-facebook"></i>&nbsp;Facebook</a>
                                 
                             </p>
                         </div>
@@ -1271,8 +1271,8 @@
                 </div>
 				<div class="footer-wrap pd-20 mb-20 card-box">
 					Copyright © 2022
-					<a href="https://youtube.com/c/DanzzCoding" target="_blank"
-						>Danzz Coding</a
+					<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ" target="_blank"
+						>Miaw Team</a
 					>. All rights reserved.
 				</div>
 			</div>
@@ -1316,7 +1316,7 @@
 				></script>
 			</div>
 			<a
-				href="https://wa.me/6288296339947?text=BANG+MAU+ORDER+PREMIUM+USER"
+				href="https://wa.me/628565337357?text=BANG+MAU+ORDER+PREMIUM+USER"
 				target="_blank"
 				class="btn btn-success btn-sm mb-0 mb-md-3 w-100"
 			>
