--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DANZZ API</title>
+    <title>MIAW API</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -19,7 +19,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Danzz <span>Coding</span></a></div>
+            <div class="logo"><a href="#">Miaw <span>Team</span></a></div>
             <ul class="menu">
                 <li><a href="/" class="menu-btn">Home</a></li>
                 <li><a href="/login" class="menu-btn">Dashboard</a></li>
@@ -36,7 +36,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Danzz</div>
+                <div class="text-2">Awy_</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="/login">Dashboard</a>
             </div>
@@ -45,7 +45,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Copyright <span class="far fa-copyright"></span> 2022 <a href="https://danzzcodingweb.vercel.app">Danzz Coding</a>. All rights reserved.</span>
+        <span>Copyright <span class="far fa-copyright"></span> 2022 <a href="https://danzzcodingweb.vercel.app">Miaw Team</a>. All rights reserved.</span>
     </footer>
 
     <script>
