--- a/views/pricing.html
+++ b/views/pricing.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By: Danzz Coding | https://danzzcoding.vercel.app -->
+<!-- Created By: Miaw Team | https://danzzcoding.vercel.app -->
 <html>
 	<head>
 		<!-- Basic Page Info -->
 		<meta charset="utf-8" />
-		<title>DANZZ API - PRICING</title>
+		<title>MIAW API - PRICING</title>
 		
 		<!-- ICON -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
@@ -193,20 +193,20 @@
 							<div class="notification-list mx-h-350 customscroll">
 								<ul>
 									<li>
-										<a href="https://youtube.com/c/DanzzCoding">
+										<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ">
 											<img src="src/images/icon2.png" alt="" />
-											<h3>Danzz Coding</h3>
+											<h3>Miaw Team</h3>
 											<p>
-												Don't Forget Subscribe Yt: DanzzCoding
+												Don't Forget Subscribe Yt: Z4bux
 											</p>
 										</a>
 									</li>
 									<li>
-										<a href="https://instagram.com/ramdani_real01">
+										<a href="https://instagram.com/alwiiyy__">
 											<img src="src/images/icon2.png" alt="" />
-											<h3>Danzz Coding</h3>
+											<h3>Miaw Team</h3>
 											<p>
-												Don't Forget Follow Ig: @ramdani_real01
+												Don't Forget Follow Ig: @alwiiyy__
 											</p>
 										</a>
 									</li>
@@ -226,7 +226,7 @@
 							<span class="user-icon">
 								<img src="src/images/icon.png" style="width: 52px;"  alt="" />
 							</span>
-							<span class="user-name">Danzz Coding</span>
+							<span class="user-name">Miaw Team</span>
 						</a>
 						<div
 							class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list"
@@ -428,7 +428,7 @@
 						style="width: 50px;"
 						alt=""
 						class="light-logo"
-					/><font color="black">&nbsp;Danzz Coding</font>
+					/><font color="black">&nbsp;Miaw Team</font>
 				</a>
 				<div class="close-sidebar" data-toggle="left-sidebar-close">
 					<i class="ion-close-round"></i>
@@ -968,7 +968,7 @@
 							<div class="sidebar-small-cap">Contact</div>
 						</li>
 						<li>
-							<a href="mailto:danzzcoding@gmail.com" class="dropdown-toggle no-arrow">
+							<a href="mailto:mr.z4bux@gmail.com" class="dropdown-toggle no-arrow">
 								<span class="micon bx bx-envelope"></span
 								><span class="mtext">Email</span>
 							</a>
@@ -980,19 +980,19 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://youtube.com/c/DanzzCoding" class="dropdown-toggle no-arrow">
+							<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-youtube"></span
 								><span class="mtext">Youtube</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://instagram.com/ramdani_real01" class="dropdown-toggle no-arrow">
+							<a href="https://instagram.com/alwiiyy__" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-instagram"></span
 								><span class="mtext">Instagram</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://facebook.com/profile.php?id=100055274594084" class="dropdown-toggle no-arrow">
+							<a href="https://www.facebook.com/AlwiZX" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-facebook"></span
 								><span class="mtext">Facebook</span>
 							</a>
@@ -1065,7 +1065,7 @@
 										<p>Expired 1 month <i class="bx bx-check-circle"></i></p>
 									</div>
 									<div class="cta">
-										<a href="https://wa.me/6288296339947?text=BANG+ORDER+PREMIUM+USER" class="btn btn-primary btn-rounded btn-lg"
+										<a href="https://wa.me/628565337357?text=BANG+ORDER+PREMIUM+USER" class="btn btn-primary btn-rounded btn-lg"
 											>Order Now</a
 										>
 									</div>
@@ -1086,7 +1086,7 @@
 										<p>Expired 1 month <i class="bx bx-check-circle"></i></p>
 									</div>
 									<div class="cta">
-										<a href="https://wa.me/6288296339947?text=BANG+ORDER+VIP+USER" class="btn btn-primary btn-rounded btn-lg"
+										<a href="https://wa.me/628565337357?text=BANG+ORDER+VIP+USER" class="btn btn-primary btn-rounded btn-lg"
 											>Order Now</a
 										>
 									</div>
@@ -1148,7 +1148,7 @@
 										</div>
 									</div>
 									<div class="cta">
-										<a href="https://wa.me/6288296339947?text=BANG+ORDER+PREMIUM+USER" class="btn btn-primary btn-rounded btn-lg"
+										<a href="https://wa.me/628565337357?text=BANG+ORDER+PREMIUM+USER" class="btn btn-primary btn-rounded btn-lg"
 											>Get Started</a
 										>
 									</div>
@@ -1177,7 +1177,7 @@
 										</div>
 									</div>
 									<div class="cta">
-										<a href="https://wa.me/6288296339947?text=BANG+ORDER+VIP+USER" class="btn btn-primary btn-rounded btn-lg"
+										<a href="https://wa.me/628565337357?text=BANG+ORDER+VIP+USER" class="btn btn-primary btn-rounded btn-lg"
 											>Get Started</a
 										>
 									</div>
@@ -1188,7 +1188,7 @@
 					<div class="footer-wrap pd-20 mb-20 card-box">
 					Copyright © 2022
 					<a href="https://youtube.com/c/DanzzCoding" target="_blank"
-						>Danzz Coding</a
+						>Miaw Team</a
 					>. All rights reserved.
 				</div>
 			</div>
