--- a/views/profile.html
+++ b/views/profile.html
@@ -4,7 +4,7 @@
 	<head>
 		<!-- Basic Page Info -->
 		<meta charset="utf-8" />
-		<title>DANZZ API - PROFILE</title>
+		<title>MIAW API - PROFILE</title>
 		
 		<!-- ICON -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">    
@@ -198,20 +198,20 @@
 							<div class="notification-list mx-h-350 customscroll">
 								<ul>
 									<li>
-										<a href="https://youtube.com/c/DanzzCoding">
+										<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ">
 											<img src="src/images/icon2.png" alt="" />
-											<h3>Danzz Coding</h3>
+											<h3>Miaw Team</h3>
 											<p>
-												Don't Forget Subscribe Yt: DanzzCoding
+												Don't Forget Subscribe Yt: z4bux
 											</p>
 										</a>
 									</li>
 									<li>
-										<a href="https://instagram.com/ramdani_real01">
+										<a href="https://instagram.com/alwiiyy__">
 											<img src="src/images/icon2.png" alt="" />
-											<h3>Danzz Coding</h3>
+											<h3>Miaw Team</h3>
 											<p>
-												Don't Forget Follow Ig: @ramdani_real01
+												Don't Forget Follow Ig: @alwiiyy__
 											</p>
 										</a>
 									</li>
@@ -231,7 +231,7 @@
 							<span class="user-icon">
 								<img src="src/images/icon.png" style="width: 52px;"  alt="" />
 							</span>
-							<span class="user-name">Danzz Coding</span>
+							<span class="user-name">Miaw Team</span>
 						</a>
 						<div
 							class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list"
@@ -242,7 +242,7 @@
 							<a class="dropdown-item" href="#"
 								><i class="dw dw-settings2"></i> Setting</a
 							>
-							<a class="dropdown-item" href="https://wa.me/6288296339947"
+							<a class="dropdown-item" href="https://wa.me/628565337357"
 								><i class="dw dw-help"></i> Help</a
 							>
 							<a class="dropdown-item" href="/login"
@@ -433,7 +433,7 @@
 						style="width: 50px;"
 						alt=""
 						class="light-logo"
-					/><font color="black">&nbsp;Danzz Coding</font>
+					/><font color="black">&nbsp;Miaw Team</font>
 				</a>
 				<div class="close-sidebar" data-toggle="left-sidebar-close">
 					<i class="ion-close-round"></i>
@@ -473,7 +473,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://wa.me/628829633947?text=menu" class="dropdown-toggle no-arrow">
+							<a href="https://wa.me/6285751337466?text=.menu" class="dropdown-toggle no-arrow">
 								<span class="micon bi bi-robot"></span
 								><span class="mtext">Example Bot</span>
 							</a>
@@ -492,7 +492,7 @@
 							<ul class="submenu">
 								<li><a href="https://github.com/Danzzxcodes">Base Wa Bot</a></li>
 								<li>
-									<a href="https://wa.me/6288296339947">Example Bot</a>
+									<a href="https://wa.me/6285751337466">Example Bot</a>
 								</li>
 							</ul>
 						</li>
@@ -502,9 +502,9 @@
 								><span class="mtext">Customer Service</span>
 							</a>
 							<ul class="submenu">
-								<li><a href="https://wa.me/6288296339947">Cs on 24 Hours</a></li>
+								<li><a href="https://wa.me/628565337357">Cs on 24 Hours</a></li>
 								<li>
-									<a href="https://chat.whatsapp.com/Gq71DUTFOhRE9efPYyobYu">Cs Group on 24 Hours</a>
+									<a href="https://chat.whatsapp.com/IYa9dkJTtltDRPdXC8JaQt">Cs Group on 24 Hours</a>
 								</li>
 							</ul>
 						</li>
@@ -973,7 +973,7 @@
 							<div class="sidebar-small-cap">Contact</div>
 						</li>
 						<li>
-							<a href="mailto:danzzcoding@gmail.com" class="dropdown-toggle no-arrow">
+							<a href="mailto:mr.z4bux@gmail.com" class="dropdown-toggle no-arrow">
 								<span class="micon bx bx-envelope"></span
 								><span class="mtext">Email</span>
 							</a>
@@ -985,19 +985,19 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://youtube.com/c/DanzzCoding" class="dropdown-toggle no-arrow">
+							<a href="https://youtube.com/channel/UCG7tzZd8TnOqXjHBXPr8aWQ" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-youtube"></span
 								><span class="mtext">Youtube</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://instagram.com/ramdani_real01" class="dropdown-toggle no-arrow">
+							<a href="https://instagram.com/alwiiyy__" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-instagram"></span
 								><span class="mtext">Instagram</span>
 							</a>
 						</li>
 						<li>
-							<a href="https://facebook.com/profile.php?id=100055274594084" class="dropdown-toggle no-arrow">
+							<a href="https://www.facebook.com/AlwiZX" class="dropdown-toggle no-arrow">
 								<span class="micon fab fa-facebook"></span
 								><span class="mtext">Facebook</span>
 							</a>
@@ -1091,18 +1091,18 @@
 								</div>
 								<h5 class="text-center h5 mb-0">Danzz Coding</h5>
 								<p class="text-center text-muted font-14">
-									Hii, i.m Danzz Coding, 16 years, from bogor - indonesia.
+									Hii, i.m Awy_, 20 years, from Kalimantan Selatan - indonesia.
 								</p>
 								<div class="profile-info">
 									<h5 class="mb-20 h5 text-blue">Contact Information</h5>
 									<ul>
 										<li>
 											<span>Email Address:</span>
-											danzzcoding@gmail.com
+											mr.z4bux@gmail.com
 										</li>
 										<li>
 											<span>Phone Number:</span>
-											+62 882-9633-9947
+											+62 856-5337-357
 										</li>
 										<li>
 											<span>Country:</span>
@@ -1110,8 +1110,8 @@
 										</li>
 										<li>
 											<span>Address:</span>
-											16810 Bogor<br />
-											West Java, Indonesian
+											Martapura<br />
+											South Borneo, Indonesian
 										</li>
 									</ul>
 								</div>
@@ -1321,7 +1321,7 @@
 				<div class="footer-wrap pd-20 mb-20 card-box">
 					Copyright © 2022
 					<a href="https://youtube.com/c/DanzzCoding" target="_blank"
-						>Danzz Coding</a
+						>Miaw Team</a
 					>. All rights reserved.
 				</div>
 			</div>
@@ -1365,7 +1365,7 @@
 				></script>
 			</div>
 			<a
-				href="https://wa.me/6288296339947?text=BANG+MAU+ORDER+PREMIUM+USER"
+				href="https://wa.me/628565337357?text=BANG+MAU+ORDER+PREMIUM+USER"
 				target="_blank"
 				class="btn btn-success btn-sm mb-0 mb-md-3 w-100"
 			>
